setup-homelab/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: gateway
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.50.200
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-wildcard
      hostname: "*.henrikkwk.no"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-henrikkwk
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-root
      hostname: henrikkwk.no
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-henrikkwk
      allowedRoutes:
        namespaces:
          from: All
